Setup for Panama benchmarking